Update Telegram link to correct URL

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
         <ul>
             <li><a href="https://instagram.com/princeay700" target="_blank">Instagram</a></li>
             <li><a href="https://www.x.com/princeay5245" target="_blank">Twitter (X)</a></li>
-            <li><a href="https://telegram.com/princeay5245" target="_blank">Telegram</a></li>
+            <li><a href="https://t.me/princeay5245" target="_blank">Telegram</a></li>
         </ul>
     </section>
 
